Rework run script